[gd_scene load_steps=8 format=3 uid="uid://dec4floc0epu2"]

[ext_resource type="Script" path="res://Scenes/Stages/Stage4/Enemies/enemy_4.gd" id="1_gv3jq"]
[ext_resource type="Texture2D" uid="uid://b71kmg2xsdct1" path="res://Assets/Stages/04/Enemies/Enemy4.png" id="1_stj2y"]
[ext_resource type="PackedScene" uid="uid://dyyfgfuvs4qcn" path="res://Scenes/Stages/Stage4/bullet_4.tscn" id="2_juv4e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7nlul"]
radius = 29.0172

[sub_resource type="Animation" id="Animation_jr736"]
resource_name = "Bounce"
length = 0.75
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-1, -9), Vector2(-1, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.19, 0.2), Vector2(0.21, 0.175)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-1, -9), Vector2(-1, -4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.19, 0.2), Vector2(0.21, 0.175)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tukr0"]
_data = {
"Walking": SubResource("Animation_jr736")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3e4kt"]
radius = 182.211
height = 368.0

[node name="Enemy4" type="RigidBody2D" groups=["Enemy"]]
collision_layer = 25
collision_mask = 25
gravity_scale = 0.0
lock_rotation = true
linear_damp = 4.0
script = ExtResource("1_gv3jq")
bullet = ExtResource("2_juv4e")

[node name="EnemySprite" type="Sprite2D" parent="."]
position = Vector2(-1, -9)
scale = Vector2(0.19, 0.2)
texture = ExtResource("1_stj2y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_7nlul")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Walking"
libraries = {
"": SubResource("AnimationLibrary_tukr0")
}

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 14.0

[node name="ShootTimer2" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["EnemyHitbox"]]
visible = false
position = Vector2(-1, -9)
scale = Vector2(0.19, 0.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(7.26316, 6)
shape = SubResource("CapsuleShape2D_3e4kt")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="ShootTimer2" to="." method="_on_shoot_timer_2_timeout"]
